--- a/src/style.scss
+++ b/src/style.scss
@@ -1,12 +1,5 @@
-/**
- * The following styles get applied both on the front of your site
- * and in the editor.
- *
- * Replace them with your own styles or remove the file completely.
- */
-
 .wp-block-markonikolas-post-meta {
-	background-color: #21759b;
-	color: #fff;
+	border: 1px dotted #f00;
 	padding: 2px;
+	font-size: 24px;
 }
